plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
	id 'net.neoforged.moddev' version '2.0.82'
}

version = '1.2'
group = 'bl4ckscor3'

base {
	archivesName = 'scwikiizer-1.21.5'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

neoForge {
	version = "21.5.62-beta"

	runs {
		client {
			client()
			logLevel = org.slf4j.event.Level.DEBUG
			gameDirectory = project.file("runs/client")
			ideName = "SCWikiizer " + ideName.get()
		}
	}

	mods {
		scwikiizer {
			sourceSet(sourceSets.main)
		}
	}
}

repositories {
    maven {
        url "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    implementation "curse.maven:security-craft-64760:6485077"
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title": project.name,
                "Specification-Vendor": "bl4ckscor3",
                "Specification-Version": project.jar.archiveVersion,
                "Implementation-Title": project.name,
                "Implementation-Version": project.jar.archiveVersion,
                "Implementation-Vendor": "bl4ckscor3"
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
	options.release = 21
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}
